--- a/Jvlaranamma/src/main/res/layout/fragment_songs.xml
+++ b/Jvlaranamma/src/main/res/layout/fragment_songs.xml
@@ -6,22 +6,19 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity$PlaceholderFragment">
+    tools:context=".SongsActivity$PlaceholderFragment">
 
     <TextView
         android:id="@+id/section_label"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+        android:layout_height="wrap_content" />
 
-    <Button
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Get Content from Web"
-        android:id="@+id/getcontentfromwebBtn"
+        android:text="SONGS"
+        android:id="@+id/textView"
         android:layout_below="@+id/section_label"
-        android:layout_toRightOf="@+id/section_label"
-        android:layout_alignParentRight="true"
-        android:onClick="onGetContentFromBtnClick" />
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
